Added criterium performance testing library and some options to enable performance testing and profiling.